# StochasticFinance

./: .gitignore  DASHBOARD_DEMO_SUMMARY.md  Makefile  README.md  README_CPP_BUILD.md  build_papers.bat  build_papers.ps1  build_papers.sh  build_strategies.ps1  compile_papers.ps1  complete_demo.ps1  dashboard_demo.py  demo.py  demo_simple.ps1  demo_strategies.ps1  enhanced_visual_backtester.py  interactive_dashboard.py  launch_dashboard.ps1  main.py  quant_research_system.py  requirements,txt  requirements.txt  status.py  stocks.db  style.tex  test_dashboard.py  test_day3.py  test_visualization.py  visual_backtester.py
IntroStochasticCalc(old)/: Chapter1.tex  Chapter2.tex  Chapter3.tex  Slideshow.tex
IntroStochasticCalc(old)/make/: Chapter1.fdb_latexmk  Chapter1.fls  Chapter2.fdb_latexmk  Chapter2.fls  Chapter3.fdb_latexmk  Chapter3.fls  Slideshow.fdb_latexmk  Slideshow.fls
StockData/: Stock.py
dashboard/: app.py
dashboard/components/: __init__.py  charts.py  controls.py  metrics.py
dashboard/pages/: README.md  analysis.py
pairs_trading_env/: pyvenv.cfg
pairs_trading_env/Scripts/: activate  activate.bat  pwiz.py
results/: phase1_setup_complete.json  phase2_data_infrastructure_complete.json
src/: __init__.py
src/backtesting/: __init__.py
src/data/: __init__.py  database.py  stock_data.py
src/models/: __init__.py  cointegration.py
src/risk/: __init__.py
src/strategy/: __init__.py  pairs_finder.py
src/utils/: __init__.py  config.py  helpers.py  visualization.py
strategies/HestonVolSurface/: CMakeLists.txt  build.ps1  hestonvolsurface.hpp  model.cpp  paper.tex
strategies/HestonVolSurface/backtest/: backtest.cpp
strategies/JumpDiffusion/: CMakeLists.txt  jumpdiffusion.hpp  model.cpp  paper.tex
strategies/JumpDiffusion/backtest/: backtest.cpp
strategies/LogNormalJumpMeanReversion/: CMakeLists.txt  lognormaljumpmeanreversion.hpp  model.cpp  paper.tex
strategies/LogNormalJumpMeanReversion/backtest/: backtest.cpp
strategies/OrnsteinUhlenbeck/: CMakeLists.txt  model.cpp  ornsteinuhlenbeck.hpp  paper.tex
strategies/OrnsteinUhlenbeck/backtest/: backtest.cpp
templates/: strategy_templates.py
tests/: test_data.py  test_setup.py
